# crpg

./: .gitignore  CMakeLists.txt  Makefile  README.md
backups/: first_world.json
include/: KeyboardManager.hpp  TileDrawer.hpp  TileManager.hpp  TileSerialiser.hpp
include/common/: BackgroundManager.hpp  TileManager.hpp  TileSerialiser.hpp
include/common/input/: ClickManager.hpp  Clickable.hpp  InputManager.hpp
include/game/: AnimationManager.hpp  CameraSystem.hpp  PlayerController.hpp
include/game/animation/: AnimationManager.hpp
include/game/enemy/: Enemy.hpp  EnemyController.hpp  EnemyManager.hpp
include/game/player/: InventoryController.hpp  PlayerController.hpp  PlayerHealth.hpp
include/utils/: ClickManager.hpp  Utils.hpp
src/: TileDrawer.cpp  TileManager.cpp  TileSerialiser.cpp  main.cpp  main_old.cpp  main_oldddd.cpp
src/common/: BackgroundManager.cpp  KeyboardManager.cpp  TileManager.cpp  TileSerialiser.cpp
src/common/input/: KeyboardManager.cpp
src/game/: AnimationManager.cpp  CameraSystem.cpp  PlayerController.cpp  main.cpp
src/game/animation/: AnimationManager.cpp
src/game/enemy/: Enemy.cpp  EnemyController.cpp  EnemyManager.cpp
src/game/player/: InventoryController.cpp  PlayerController.cpp  PlayerHealth.cpp
src/worldBuilder/: main.cpp  main_old.cpp  main_oldd.cpp  main_olddd.cpp  main_oldddd.cpp
